Fix Vercel deployment configuration

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "static"
   ],
   "scripts": {
-    "build": "cd static && npm run build",
+    "build": "cd static && npm install && npm run build",
     "dev": "cd static && npm run dev",
-    "start": "cd static && npm run start"
+    "start": "cd static && npm run start",
+    "install": "cd static && npm install"
   }
 } 
