--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": ".next",
+  "buildCommand": "cd static && npm install && npm run build",
+  "outputDirectory": "static/.next",
   "framework": "nextjs"
 } 
