--- a/static/package.json
+++ b/static/package.json
@@ -16,14 +16,14 @@
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
     "typescript": "^5"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0"
   }
 } 
